# realworld-spec-driven-oneshot

./: .gitignore  README.md  SPEC.md  api.test.mjs  package-lock.json  package.json  start-and-test.sh
examples/cpp-drogon/: CMakeLists.txt  config.json  main.cc  session.md  start.sh
examples/cpp-drogon/controllers/: ArticleController.cc  CommentController.cc  HealthController.cc  ProfileController.cc  TagsController.cc  UserController.cc
examples/cpp-drogon/utils/: Auth.h
examples/dotnet-csharp/: Program.cs  RealWorld.csproj  RealWorld.http  session.md  start.sh
examples/dotnet-csharp/Controllers/: ArticlesController.cs  ProfilesController.cs  TagsController.cs  UsersController.cs
examples/dotnet-csharp/DTOs/: ApiDtos.cs
examples/dotnet-csharp/Data/: ApplicationDbContext.cs
examples/dotnet-csharp/Migrations/: 20260114020436_InitialCreate.Designer.cs  20260114020436_InitialCreate.cs  ApplicationDbContextModelSnapshot.cs
examples/dotnet-csharp/Models/: Article.cs  Comment.cs  Favorite.cs  Follow.cs  Tag.cs  User.cs
examples/dotnet-csharp/Properties/: launchSettings.json
examples/dotnet-csharp/Services/: JwtService.cs  (+1 more)
examples/go-gin/: go.mod  main.go  session.md  start.sh
examples/java-spring-hibernate/: pom.xml  session.md  start.sh
examples/nodejs/: session.md  start.sh
examples/nodejs-express/: package-lock.json  package.json  server.js
examples/python-fastapi/: main.py  requirements.txt  session.md  start.sh
examples/rust-axum/: Cargo.toml  session.md  start.sh
examples/rust-axum/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs
(+25 files in other folders)
